# JobFusion

./: Config.py  README.md  env.template.txt  final_jobfusion_app.py  final_jobfusion_app2.py  jobfusion2_agents.py  jobfusion_agents.py  jobfusion_app.py  jobfusion_tasks.py  mock_interview_chatbot.py  pyproject.toml  re_jobfusion_interview_mock.py  requirements.txt  run_install_env.py
output/: jd.txt
output/faiss_index/: faiss_0.faiss  faiss_0.pkl
tools/: jd_scraper_tools.py
